objects/PRMRewardRedemptionShippedAddress__c.object
<CustomObject>
    <fields>
        <fullName>FieloEE_Redemption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redemption</label>
        <referenceTo>FieloEE__Redemption__c</referenceTo>
        <relationshipName>PRM_Redemption_Despatched_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRMRedemptionShippingAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Address</label>
        <referenceTo>PRMRewardRedemptionShippingAddress__c</referenceTo>
        <relationshipName>PRM_Redemption_Despatched_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingAddressName__c</fullName>
        <formula>PRMRedemptionShippingAddress__r.CompanyName__c</formula>
        <label>Shipping Address Name</label>
        <type>Text</type>
    </fields>
    <label>Shipping Address used for Redemption</label>
    <nameField>
        <displayFormat>RDA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Addresses used for Redemption</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>